public/stylesheets/profile.css
.detail-list {
    right: 42%;
    font-size: 1.3rem;
}

a:hover {
    text-decoration: none;
}

.quote h2{
    text-align: left;
}

.qa-pair p:hover {
    cursor: pointer;
}

.program {
    margin-top: 1.7em;
}

h4 {
    text-align: center;
}

.interview p {
    text-align: left;
}

.program p {
    font-size: 0.75em;
}

.audio {
    margin-top: 2em;
}

p {
    color: #7a6f67;
}

h1 {
    color: #AD7118;
    text-transform: uppercase;
}

h2 {
    color: #7a6f67;
    font-size: 2em;
    text-align: center;
    margin-top: 0;
}

h3 {
    text-transform: uppercase;
}

.description {
    margin-top: 1em;
}

.col-md-4 {
    text-align: center;
}

.support {
    padding: 1rem 3rem;
}

@media screen and (min-width: 1000px) {

    .mobile-ver{
        display: inline;
        visibility: hidden;
    }
    .detail-list{
        right: 27%;
        font-size: 0.8rem;
    }
    .desktop-ver{
        display: inline;
        visibility: visible;
    }
    .map{
        right: 5%;
    }
    .support{
        padding: .5rem 2rem;
    }
}

/*end of copied script may overlap with home*/


hr{
    border-style: solid;
    border-color: #e1b67c;
    border-width: 4px 0 0 0;
    margin: 0;
}

.audio-style {
    margin: 1.2rem 0;
    text-align: center;
}

/*.btn {*/
    /*margin-top: 5rem;*/
/*}*/

.block-name {
    background-color: rgba(56, 56, 56, 0.83);
    padding: 2rem;
}

.container-style {
    display: block;
    padding-top: 5rem;
}

.detail-list {
    color: #47413C;
    display: inline;
    z-index: 2;
    list-style: none;
    text-transform: uppercase;

    font-weight: 500;
    margin-top: 3rem;
}

.detail-list li {
    margin-bottom: 2rem;
}

.header_name {
    display: block;
    margin-bottom: 4rem;
    background-color: rgba(219, 143, 0, 0.52);
    text-transform: uppercase;
    color: white;
    display: none;
}

.interview_title {
    text-align: center;
}

.interview h3 {
    text-align: center;
}

.list {
    margin-top: 5rem;
    display: inline;
    height: 20rem;
}

.middle {
    text-align: center;
}

.mobile-ver {
    margin: 2rem 0 2rem 0;
}

.profilePic {
    margin: auto;
    position: relative;
    height: 15rem;
    width: 15rem;
    border-radius: 50%;
    border: #AD7118 6px solid;
    display: block;
}

.interview>h3 {
    color: #47413C;
    text-transform: uppercase;
}

.btn.btn-default,
.btn.btn-default:hover,
.btn.btn-default:active,
.btn.btn-default:focus {
    margin-bottom: 20px;
}

.hide-all {
    display: none;
}

.question:hover {
    text-decoration: underline;
}

.question {
    color: #186EAD;
    font-size: 0.8em;
}

.answer {
    font-weight: normal;
    font-size: smaller;
    display: none;
}

.support {
    font-weight: 900;
    font-size: 1.4rem;
    background-color: #AD7118;
    color: #fff;
    text-align: center;
}

.support:hover,
.support:focus {
    text-decoration: none;
    color: #fff;
}

#details {
    display: block;
    text-align: center;
}

#more-info {
    margin: 1rem 0 2rem 0;
    display: block;
    font-size: 0.8rem;
}

